--- a/src/App.css
+++ b/src/App.css
@@ -4,19 +4,25 @@
   box-sizing: content-box;
 }
 
-/* :root {
-    --headerColor: #FF742B;
-    --backgroundColor: #F6F6EF;
-    --textColor1: #391700;
-    --textColor2: #B4B4B1;
-}; */
+:root {
+  --headerColor: #ff742b;
+  --backgroundColor: #f6f6ef;
+  --textColor1: #391700;
+  --textColor2: #b4b4b1;
+}
 
+/* header start  */
+.header-container {
+  display: flex;
+  justify-content: center;
+}
 .head {
   justify-content: left;
   box-sizing: border-box;
   padding: 0.1rem;
-  width: 100%;
-  background-color: #ff6600;
+  width: 80vw;
+  height: 3vh;
+  background-color: var(--headerColor);
   display: flex;
   gap: 0.4rem;
   list-style: none;
@@ -29,7 +35,7 @@ p {
 }
 .logo {
   border: 1px solid white;
-  width: 18px;
+  width: 15px;
 }
 .links {
   text-decoration: none;
@@ -38,47 +44,126 @@ p {
   margin: 0;
 }
 .login {
-  margin-left: 95%;
+  margin-left: 75%;
   position: absolute;
-  /* border: 1px solid white; */
+  /* border: 1px solid red; */
 }
+/* header end  */
 
 .footerWrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .footer {
-    background-color: #F6F6EF;
-    display: flex;
-    flex-direction: column;
-    row-gap: 1rem;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    text-decoration: none;
-    border-top: solid #FF742B 0.2rem;
+  background-color: #f6f6ef;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  width: 80vw;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-decoration: none;
+  border-top: solid #ff742b 0.2rem;
 }
 
 .footer a {
-    text-decoration: none;
-    color: #391700
+  text-decoration: none;
+  color: #391700;
 }
 
 .footerLinks a {
-    padding-right: 0.5rem;
-    padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
 }
 
 .footerLinks {
-    font-size: 0.8rem;
+  font-size: 0.8rem;
 }
 
 .searchLabel {
-    padding-right: 0.5rem;
-    color: #B4B4B1;
+  padding-right: 0.5rem;
+  color: #b4b4b1;
 }
 
+/* app start   */
+
+.news-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  justify-content: left;
+  width: 80vw;
+  background-color: #f6f6ef;
+  margin: 0 auto;
+}
+.news-container:hover {
+  cursor: pointer;
+}
+.title {
+  font-weight: 400;
+  font-size: 13px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+.url {
+  margin-left: 0.3rem;
+  color: #828282;
+  font-size: 11px;
+  text-decoration: none;
+}
+
+.snippet {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.3rem;
+  color: #828282;
+  font-size: 9px;
+}
+
+/* TOOLTIP TIME */
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: #555;
+  color: #fff;
+  /* text-align: center; */
+  /* border-radius: 6px; */
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  /* margin-left: -60px; */
+  opacity: 0;
+  /* transition: opacity 0.3s; */
+}
+
+.tooltip .tooltiptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+  opacity: 1;
+}
