changed tooltip css

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ a {
 .tooltip {
   position: relative;
   display: inline-block;
-  border-bottom: 1px dotted black;
+  /* border-bottom: 1px dotted black; */
   color: #828282;
 }
 
